[package]
name = "vnc-client-adwaita"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Adwaita GTK4 VNC client with GSettings persistence"

[[bin]]
name = "vnc-client-adwaita"
path = "src/main.rs"

[dependencies]
gtk4 = { workspace = true }
glib = { workspace = true }
gio = { workspace = true }
adw = { version = "0.9", package = "libadwaita", features = ["v1_9"] }
vnc-client = { path = "../vnc-client" }
vnc-widget-gtk4 = { path = "../vnc-widget-gtk4" }
log = "0.4"
env_logger = "0.11"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
